--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ apply plugin: 'kotlin-kapt'
 
 android {
 
-    compileSdkVersion 27
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "com.erros.minimax.fenix"
-        minSdkVersion 14
-        targetSdkVersion 27
+        minSdkVersion 15
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -18,7 +18,6 @@ android {
     }
     buildTypes {
         release {
-
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -30,14 +29,14 @@ androidExtensions {
 }
 
 ext {
-    supportLibraryVersion = "27.1.1"
+    supportLibraryVersion = "28.0.0"
     retrofitVersion = "2.2.0"
-    koin_version = '1.0.2'
+    koinVersion = '2.0.1'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
     implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
     implementation "com.android.support:design:$supportLibraryVersion"
@@ -55,7 +54,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
     //DI
-    implementation "org.koin:koin-android-scope:$koin_version"
+    implementation "org.koin:koin-android-scope:$koinVersion"
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
